# corvusforge

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  demo_prod.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
corvusforge/: __init__.py  config.py
corvusforge/bridge/: __init__.py  audit_bridge.py  crypto_bridge.py  saoe_adapter.py  transport.py
corvusforge/cli/: __init__.py  app.py
corvusforge/contrib/: __init__.py  decisions.py  hooks.py
corvusforge/core/: __init__.py  artifact_store.py  envelope_bus.py  hasher.py  orchestrator.py  prerequisite_graph.py  production_guard.py  run_ledger.py  stage_machine.py  version_pinner.py  waiver_manager.py
corvusforge/dashboard/: __init__.py  app.py
corvusforge/marketplace/: __init__.py  marketplace.py
corvusforge/models/: __init__.py  artifacts.py  config.py  envelopes.py  ledger.py  reports.py  routing.py  stages.py  versioning.py  waivers.py
corvusforge/monitor/: __init__.py  projection.py  renderer.py
corvusforge/plugins/: __init__.py  loader.py  registry.py
corvusforge/routing/: __init__.py  dispatcher.py
corvusforge/stages/: __init__.py  base.py  s0_intake.py  s1_prerequisites.py  s2_environment.py  s3_test_contract.py  s4_code_plan.py  s55_accessibility.py  s575_security.py  s5_implementation.py  s6_verification.py  s7_release.py
corvusforge/thingstead/: __init__.py  executors.py  fleet.py  memory.py  models.py
docs/: api-reference.md  architecture.md  hardening-log.md  quickstart.md
docs/adr/: 0001-fail-closed-verification.md  0002-waiver-signature-enforcement.md  0003-external-ledger-anchoring.md  0004-memory-shard-run-isolation.md  0005-build-monitor-as-ledger-projection.md  0006-routing-sink-failure-isolation.md  0007-ci-as-trust-root.md
docs/ops/: runbook.md
docs/security/: threat-model.md
tests/: conftest.py
tests/adversarial/: __init__.py  test_plugin_trust.py  (+9 more)
(+37 files in other folders)
