[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "corvusforge"
version = "0.3.0"
description = "Deterministic, Auditable, Contract-Driven Coding Pipeline"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "nikodemus.crypto", email = "forge@corvusforge.dev"}
]
keywords = [
  "pipeline", "forge", "deterministic", "audit",
  "saoe", "accessibility", "security", "thingstead", "dlc"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "typer[all]>=0.15",
  "rich>=13.9",
]

[project.optional-dependencies]
saoe = [
  "saoe-core",
  "saoe-openclaw",
]
dashboard = [
  "streamlit>=1.40",
]
prod = [
  "gunicorn",
  "uvicorn",
  "prometheus-client",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.8",
]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
corvusforge = "corvusforge.cli.app:app"

[project.urls]
Homepage = "https://github.com/nikodemus-eth/corvusforge"
Repository = "https://github.com/nikodemus-eth/corvusforge"
Documentation = "https://github.com/nikodemus-eth/corvusforge#readme"

[tool.hatch.build.targets.wheel]
packages = ["corvusforge"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=corvusforge --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["N802", "N803"]
